--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-playwright==1.49.0
-beautifulsoup4==4.12.2
-aiohttp==3.11.18
-openai==1.76.0
-python-dotenv==1.0.0
-requests==2.32.3
-tqdm==4.67.1
-
+playwright>=1.49.0,<2.0.0
+beautifulsoup4>=4.12.2,<5.0.0
+aiohttp>=3.11.0,<4.0.0
+openai>=1.76.0,<2.0.0
+python-dotenv>=1.0.0,<2.0.0
+requests>=2.32.0,<3.0.0
+tqdm>=4.67.0,<5.0.0
+pydantic-settings>=2.0.0,<3.0.0
+pydantic>=2.0.0,<3.0.0
+typer>=0.9.0,<1.0.0
+prompt-toolkit>=3.0.0,<4.0.0
+PyYAML>=6.0.0,<7.0.0
