--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ pydantic>=2.0.0,<3.0.0
 typer>=0.9.0,<1.0.0
 prompt-toolkit>=3.0.0,<4.0.0
 PyYAML>=6.0.0,<7.0.0
+aiofiles>=0.8.0,<1.0.0
+google-generativeai>=0.7.0,<1.0.0
