Fix multimodal Perplexity crash and filter video thumbnails
Ensure payload['messages'] is set before debug to avoid IndexError when image_content is empty, and filter out Twitter Amplify video thumbnails from image_content to prevent invalid media in API call.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,13 @@ scraped_data/
 debug_last_page.html
 pyvenv.cfg 
 .env
+
+# Unnecessary generated or backup files
+backup_data_*
+debug_output/
+debug.sh
+test_perplexity.sh
+verify_setup.sh
+sound.wav
+
+**/.claude/settings.local.json
