Add support for new AI models and tests

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 # API Keys (required)
 PERPLEXITY_API_KEY=pplx-your-key-here
 GEMINI_API_KEY=your-gemini-key-here
+OPENAI_API_KEY=sk-your-openai-key
+ANTHROPIC_API_KEY=claude-your-key
+DEEPSEEK_API_KEY=deepseek-your-key
 
 # Optional Configuration
 DATA_DIR=scraped_data
